...
              dropdownItems =
                  listOf("Entry-Level", "Mid-Level", "Senior-Level", "Executive-Level")),
          InputFieldData(
              value = jobDescription,
              onValueChange = { jobDescription = it },
              question = "Please provide the job description:",
              placeholder = "Paste the job description here",
              testTag = "jobDescriptionInput",
              isScrollable = true,
              height = AppDimensions.jobDescriptionInputFieldHeight),
          InputFieldData(
              value = focusArea,
              onValueChange = { focusArea = it },
...
